force-app/main/default/objects/DeliveryGroup__c/DeliveryGroup__c.object-meta.xml
<CustomObject>
    <label>Delivery Group</label>
    <nameField>
        <label>Delivery Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>