force-app/main/default/objects/DeliveryGroup__c/fields/AddressHtml__c.field-meta.xml
<CustomField>
    <fullName>AddressHtml__c</fullName>
    <formula>IF (
  ISPICKVAL( LocationType__c, &apos;Venue&apos; ),
  DeliveryCenter__r.ShippingStreet &amp; BR() &amp;
  DeliveryCenter__r.ShippingCity &amp; &apos; &apos; &amp;
  DeliveryCenter__r.ShippingState &amp;
  IF (
    NOT(ISBLANK( DeliveryCenter__r.ShippingPostalCode )),
    &apos;, &apos; &amp; DeliveryCenter__r.ShippingPostalCode,
    &apos;&apos;
  ) &amp; BR() &amp;
  DeliveryCenter__r.ShippingCountry,
  Address__Street__s &amp; BR() &amp;
  Address__City__s &amp; &apos; &apos; &amp;
  TEXT(Address__StateCode__s) &amp;
  IF (
    NOT(ISBLANK( Address__PostalCode__s )),
    &apos;, &apos; &amp; Address__PostalCode__s,
    &apos;&apos;
  ) &amp; BR() &amp;
  TEXT(Address__CountryCode__s)
)</formula>
    <label>Address HTML</label>
    <type>Text</type>
</CustomField>