force-app/main/default/objects/DeliveryGroup__c/fields/AddressLabel__c.field-meta.xml
<CustomField>
    <fullName>AddressLabel__c</fullName>
    <formula>IF (
  ISPICKVAL( DeliveryLocationType__c, &apos;Delivery Center&apos; ),
  DeliveryCenter__r.ShippingStreet &amp;
  IF (
    NOT(ISBLANK( DeliveryCenter__r.ShippingCity )),
    &apos;, &apos; &amp; DeliveryCenter__r.ShippingCity,
    &apos;&apos;
  )&amp;
  IF (
    NOT(ISBLANK(DeliveryCenter__r.ShippingState )),
    &apos; &apos; &amp; DeliveryCenter__r.ShippingState,
    &apos;&apos;
  ) &amp;
  IF (
    NOT(ISBLANK( DeliveryCenter__r.ShippingPostalCode )),
    &apos;, &apos; &amp; DeliveryCenter__r.ShippingPostalCode,
    &apos;&apos;
  ),
  DeliveryAddress__Street__s &amp;
  IF (
    NOT(ISBLANK( DeliveryAddress__City__s )),
    &apos;, &apos; &amp; DeliveryAddress__City__s,
    &apos;&apos;
  ) &amp;
  IF (
    NOT(ISBLANK(TEXT(DeliveryAddress__StateCode__s ))),
    &apos; &apos; &amp; TEXT(DeliveryAddress__StateCode__s),
    &apos;&apos;
  ) &amp;
  IF (
    NOT(ISBLANK( DeliveryAddress__PostalCode__s )),
    &apos;, &apos; &amp; DeliveryAddress__PostalCode__s,
    &apos;&apos;
  )
)</formula>
    <label>Address Label</label>
    <type>Text</type>
</CustomField>