force-app/main/default/objects/DeliveryGroup__c/fields/DeliveryAddressHtml__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddressHtml__c</fullName>
    <formula>IF (
  ISPICKVAL( DeliveryLocationType__c, &apos;Delivery Center&apos; ),
  DeliveryCenter__r.ShippingStreet &amp; " " &amp;
  DeliveryCenter__r.ShippingCity &amp; &apos; &apos; &amp;
  DeliveryCenter__r.ShippingState &amp;
  IF (
    NOT(ISBLANK( DeliveryCenter__r.ShippingPostalCode )),
    &apos;, &apos; &amp; DeliveryCenter__r.ShippingPostalCode,
    &apos;&apos;
  ) &amp; " " &amp;
  DeliveryCenter__r.ShippingCountry,
  DeliveryAddress__Street__s &amp; " " &amp;
  DeliveryAddress__City__s &amp; &apos; &apos; &amp;
  TEXT(DeliveryAddress__StateCode__s) &amp;
  IF (
    NOT(ISBLANK( DeliveryAddress__PostalCode__s )),
    &apos;, &apos; &amp; DeliveryAddress__PostalCode__s,
    &apos;&apos;
  ) &amp; " " &amp;
  TEXT(DeliveryAddress__CountryCode__s)
)</formula>
    <label>Delivery Address HTML</label>
    <type>Text</type>
</CustomField>