force-app/main/default/objects/DeliveryGroup__c/fields/DeliveryAttentionContactName__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAttentionContactName__c</fullName>
    <inlineHelpText>Attention contact name for delivery when location type is Address.</inlineHelpText>
    <label>Attention Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>