force-app/main/default/objects/DeliveryGroup__c/fields/DeliveryAttentionContactPhone__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAttentionContactPhone__c</fullName>
    <inlineHelpText>Attention contact phone for delivery when location type is Address.</inlineHelpText>
    <label>Attention Contact Phone</label>
    <type>Phone</type>
</CustomField>