force-app/main/default/objects/DeliveryGroup__c/fields/DeliveryCenter__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Center</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Delivery Groups</relationshipLabel>
    <relationshipName>DeliveryCenter</relationshipName>
    <type>Lookup</type>
</CustomField>