force-app/main/default/objects/DeliveryGroup__c/fields/DeliveryCenterAttentionContact__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCenterAttentionContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact person at the delivery center (Attn).</inlineHelpText>
    <label>Attention Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Delivery Groups</relationshipLabel>
    <relationshipName>DgDeliveryCenterAttn</relationshipName>
    <type>Lookup</type>
</CustomField>