force-app/main/default/objects/DeliveryGroup__c/fields/DeliveryCenterName__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCenterName__c</fullName>
    <formula>IF(
  ISPICKVAL(LocationType__c, &apos;Delivery Center&apos;),
  DeliveryCenter__r.Name,
  &apos;&apos;
)</formula>
    <label>Delivery Center Name</label>
    <type>Text</type>
</CustomField>