force-app/main/default/objects/DeliveryGroup__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Delivery Groups</relationshipLabel>
    <relationshipName>DeliveryGroups</relationshipName>
    <type>Lookup</type>
</CustomField>