force-app/main/default/objects/DeliveryGroup__c/fields/PickupAddress__c.field-meta.xml
<CustomField>
    <fullName>PickupAddress__c</fullName>
    <label>Pickup Address</label>
    <type>Address</type>
</CustomField>