force-app/main/default/objects/DeliveryGroup__c/fields/PickupAddressHtml__c.field-meta.xml
<CustomField>
    <fullName>PickupAddressHtml__c</fullName>
    <formula>IF (
  ISPICKVAL( PickupLocationType__c, &apos;Pickup Center&apos; ),
  PickupCenter__r.ShippingStreet &amp; " " &amp;
  PickupCenter__r.ShippingCity &amp; &apos; &apos; &amp;
  PickupCenter__r.ShippingState &amp;
  IF (
    NOT(ISBLANK( PickupCenter__r.ShippingPostalCode )),
    &apos;, &apos; &amp; PickupCenter__r.ShippingPostalCode,
    &apos;&apos;
  ) &amp; " " &amp;
  PickupCenter__r.ShippingCountry,
  PickupAddress__Street__s &amp; " " &amp;
  PickupAddress__City__s &amp; &apos; &apos; &amp;
  TEXT(PickupAddress__StateCode__s) &amp;
  IF (
    NOT(ISBLANK( PickupAddress__PostalCode__s )),
    &apos;, &apos; &amp; PickupAddress__PostalCode__s,
    &apos;&apos;
  ) &amp; " " &amp;
  TEXT(PickupAddress__CountryCode__s)
)</formula>
    <label>Pickup Address HTML</label>
    <type>Text</type>
</CustomField>