force-app/main/default/objects/DeliveryGroup__c/fields/PickupAttentionContactName__c.field-meta.xml
<CustomField>
    <fullName>PickupAttentionContactName__c</fullName>
    <inlineHelpText>Attention contact name for pickup when location type is Address.</inlineHelpText>
    <label>Attention Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>