force-app/main/default/objects/DeliveryGroup__c/fields/PickupAttentionContactPhone__c.field-meta.xml
<CustomField>
    <fullName>PickupAttentionContactPhone__c</fullName>
    <inlineHelpText>Attention contact phone for pickup when location type is Address.</inlineHelpText>
    <label>Attention Contact Phone</label>
    <type>Phone</type>
</CustomField>