force-app/main/default/objects/DeliveryGroup__c/fields/PickupCenter__c.field-meta.xml
<CustomField>
    <fullName>PickupCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup Center</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Delivery Groups</relationshipLabel>
    <relationshipName>PickupCenter</relationshipName>
    <type>Lookup</type>
</CustomField>