force-app/main/default/objects/DeliveryGroup__c/fields/PickupCenterAttentionContact__c.field-meta.xml
<CustomField>
    <fullName>PickupCenterAttentionContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact person at the pickup center (Attn).</inlineHelpText>
    <label>Attention Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Delivery Groups</relationshipLabel>
    <relationshipName>DgPickupCenterAttn</relationshipName>
    <type>Lookup</type>
</CustomField>