force-app/main/default/objects/DeliveryGroup__c/fields/PickupLocationType__c.field-meta.xml
<CustomField>
    <fullName>PickupLocationType__c</fullName>
    <label>Pickup Location Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Pickup Center</fullName>
                <default>true</default>
                <label>Pickup Center</label>
            </value>
            <value>
                <fullName>Venue</fullName>
                <isActive>false</isActive>
                <label>Venue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>