force-app/main/default/objects/DeliveryGroup__c/recordTypes/Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Opportunity</fullName>
    <active>true</active>
    <label>Opportunity</label>
</RecordType>